--- a/h4/Untitled.ipynb
+++ b/h4/Untitled.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "1cfa1a16-b067-4780-bef0-983558f56938",
    "metadata": {},
    "outputs": [
@@ -210,7 +210,7 @@
        "[300 rows x 5 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,38 +221,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "07dc37c5-0fc2-41c9-8f43-f60e9eb45798",
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "899ad46f5ae94940ad33533bfb254e15",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "modules.json:   0%|          | 0.00/229 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5a4f8aa5262b424e953fcc3afffbaa28",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "config_sentence_transformers.json:   0%|          | 0.00/212 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -262,132 +234,6 @@
       "\n",
       "\n"
      ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "16c7be6fca6248e18e082499e093043b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "README.md:   0%|          | 0.00/8.71k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fec46dbd4b55420da325564c44ad719f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "sentence_bert_config.json:   0%|          | 0.00/53.0 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c3961d788a8e487b8dfa32cc569e70fe",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "config.json:   0%|          | 0.00/571 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ca665b475fd34f9a8010eea7801c175f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model.safetensors:   0%|          | 0.00/438M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e20df70a05c445bad2ee50c5cffab52",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer_config.json:   0%|          | 0.00/363 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "33ccbd4fabf547379a6a1288e4f3dfaa",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "vocab.txt:   0%|          | 0.00/232k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8d8e35b814f6486285db729d5ca8e84a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer.json:   0%|          | 0.00/466k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b901bd48f91243699daec90149641913",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "special_tokens_map.json:   0%|          | 0.00/239 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "65ae54b754d34f12a5a8dbba18ce42da",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "1_Pooling/config.json:   0%|          | 0.00/190 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -399,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "id": "b7b7d780-768e-4a7c-82ad-4bf476c0615c",
    "metadata": {},
    "outputs": [
@@ -409,7 +255,7 @@
        "-0.42244655"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "d35e1e59-58b5-42ed-a4de-32b7e5576cd1",
    "metadata": {},
    "outputs": [],
@@ -431,14 +277,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "90586c7a-c6de-4fc5-81a7-74361bf00ec6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b58b62ba67c949158012112fc0aeb712",
+       "model_id": "291b86a0159f4f8bb7b2efc767b7f5b8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -466,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "a907d42b-1905-4fdd-9a2d-ef2bbc49115a",
    "metadata": {},
    "outputs": [
@@ -476,7 +322,7 @@
        "31.67430877685547"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "id": "b6d1d658-d291-44de-bc1e-e5d3e9de6834",
    "metadata": {},
    "outputs": [],
@@ -502,14 +348,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "id": "e2429b18-c141-4c0f-8060-d4d58778d59b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a625918bf05549beaf84346ac879ea04",
+       "model_id": "d486ce06c9be4b3084abe6fa91567b7c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -534,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "id": "95ff6486-be98-4e5e-abbc-b0e54388dd26",
    "metadata": {},
    "outputs": [
@@ -544,7 +390,7 @@
        "0.8362348973751068"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,8 +402,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "a972c51e-88e3-4bfc-939e-f1112124bc2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "answer_llm     Yes, all sessions are recorded, so if you miss...\n",
+       "answer_orig    Everything is recorded, so you won’t miss anyt...\n",
+       "document                                                5170565b\n",
+       "question                    Are sessions recorded if I miss one?\n",
+       "course                                 machine-learning-zoomcamp\n",
+       "Name: 10, dtype: object"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r = df.iloc[10]\n",
+    "r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "250fdc4f-f341-493f-ba08-5fe12ea22062",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from rouge import Rouge\n",
+    "rouge_scorer = Rouge()\n",
+    "\n",
+    "scores = rouge_scorer.get_scores(r['answer_llm'], r['answer_orig'])[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "83eb2ef4-414d-4271-9aa0-769dfc3dae45",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'rouge-1': {'r': 0.45454545454545453,\n",
+       "  'p': 0.45454545454545453,\n",
+       "  'f': 0.45454544954545456},\n",
+       " 'rouge-2': {'r': 0.21621621621621623,\n",
+       "  'p': 0.21621621621621623,\n",
+       "  'f': 0.21621621121621637},\n",
+       " 'rouge-l': {'r': 0.3939393939393939,\n",
+       "  'p': 0.3939393939393939,\n",
+       "  'f': 0.393939388939394}}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5ef0222-5f81-40ae-ba44-affbb4486e66",
    "metadata": {},
    "outputs": [],
    "source": []
