--- a/h4/Untitled.ipynb
+++ b/h4/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "0d0312cc-3a86-462e-ab4c-439897f30318",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "f77206d6-dea3-48ca-adb2-ffa195432172",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "id": "1cfa1a16-b067-4780-bef0-983558f56938",
    "metadata": {},
    "outputs": [
@@ -210,7 +210,7 @@
        "[300 rows x 5 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "291b86a0159f4f8bb7b2efc767b7f5b8",
+       "model_id": "8349d037cbf540e3b586dc8decc95add",
        "version_major": 2,
        "version_minor": 0
       },
@@ -355,7 +355,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d486ce06c9be4b3084abe6fa91567b7c",
+       "model_id": "54fc1126d18b4806a7ba9a249fcfe78d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "a972c51e-88e3-4bfc-939e-f1112124bc2e",
    "metadata": {},
    "outputs": [
@@ -417,7 +417,7 @@
        "Name: 10, dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "250fdc4f-f341-493f-ba08-5fe12ea22062",
    "metadata": {},
    "outputs": [],
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "83eb2ef4-414d-4271-9aa0-769dfc3dae45",
    "metadata": {},
    "outputs": [
@@ -460,7 +460,7 @@
        "  'f': 0.393939388939394}}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,8 +471,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "f5ef0222-5f81-40ae-ba44-affbb4486e66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f_scores = [scores['rouge-1']['f'], scores['rouge-2']['f'], scores['rouge-l']['f']]\n",
+    "\n",
+    "average_f_score = sum(f_scores) / len(f_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "49ae3ee9-3f24-41af-9359-ed610ebc1365",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.35490034990035496"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "average_f_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "c591fe9e-7e3f-4b5e-bf0e-d0e2b474a2b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6811fb8ce4834042ad305859fcd4bc71",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/300 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "rouge_scorer = Rouge()\n",
+    "\n",
+    "avg = 0\n",
+    "\n",
+    "for i, row in enumerate(tqdm(ground_truth)):\n",
+    "    \n",
+    "    scores = rouge_scorer.get_scores(row['answer_llm'], row['answer_orig'])[0]\n",
+    "\n",
+    "    df.at[i, 'f1-rouge2'] = scores['rouge-2']['f']\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "cd78bf0f-bf2b-45d2-8088-8290a507f0a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.20696501983423318"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['f1-rouge2'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67c27b48-69dd-4539-a233-c7332d4729b5",
    "metadata": {},
    "outputs": [],
    "source": []
